--- a/WebContent/css/mycss.css
+++ b/WebContent/css/mycss.css
@@ -33,16 +33,13 @@
 	background-repeat: no-repeat; 
 }
 
-
-
-
 .div-background{
-	width:550px;
-	height: 400px;
+	width:860px;
+	height: 500px;
 	background: #fff;
 	background-color:rgba(255, 255, 255, 0.3); 
-	margin-top:200px;
-	margin-left:60px; 
+	margin-top:150px;
+	margin-left:200px; 
 }
 
 .li-title{
@@ -56,9 +53,26 @@
 	margin-top:20px;
 }
 
-.ul-whole{
+.li-buttons{
+	height:30px;
+	width:320px;
+	margin-top:20px;
+}
+
+.li-inputfield{
+	margin-top:20px;
+}
+
+.ul-input{
 	padding-top:50px;
 	list-style-type:none;
+}
+
+.ul-result{
+	list-style-type:none;
+	position:absolute;
+	left:660px;
+	top:203px;
 }
 
 .label-tag{
@@ -69,6 +83,70 @@
 	text-align:left;
 	display:inline-block;
 	width:120px;
+}
+
+.button-lable-option{
+	display:block;
+	background:#fff;
+	font-family:Arial;
+	padding-top:5px;
+	padding-bottom:5px;
+	font-size: 13px;
+	border:0px;
+	width:100%;
+	margin:0px auto;
+}
+
+.div-option{
+	width:100px;
+	height:125px;
+	background:#fff;
+	text-align:ceter;
+	margin-left:189px;
+	margin-top:0px;
+	display:none;
+	position:relative;
+	z-index: 999; 
+	border:0px;
+}
+
+.label-names-tag{
+	color:#fff;
+	font-size: 20px;
+	font-weight:bold;
+	font-family:Arial;
+	text-align:left;
+	display:inline-block;
+	width:120px;
+	height:30px;
+	float:left; 
+	margin-top:5px;
+}
+
+.li-input-field{
+	height:30px;
+	width:250px;
+	margin-top:20px;
+}
+
+.li-for-name{
+	height:36px;
+	width:250px;
+	margin-top:1px;
+}
+
+.label-name{
+	display:block;
+	background: #fff;
+	border-style:solid;
+	border-color:#E6E6FA;
+	height:30px;
+	width:250px;
+	padding-left:10px;
+	padding-right:10px;
+	margin-left:13px;
+	font-size:20px;
+	font-family:Arial;
 }
 
 .input-text{
@@ -84,30 +162,50 @@
 	font-family:Arial;
 }
 
-.input-result{
+.p-result{
 	display:inline-block;
 	background: #fff;
 	border:0.2;
 	border-style:solid;
 	border-color:#E6E6FA;
 	height:30px;
-	width:250px;
-	margin-left:10px;
+	width:200px;
+	margin-left:-30px;
 	padding-left:10px;
 	padding-right:10px;
 	font-size:20px;
 	font-family:Arial;
 }
 
-.submit-newjoseph{
+.button-append{
 	height:30px;
-	width:100px;
+	width:110px;
 	font-weight: bold;
 	font-family:Arial;
 	background-color:#EEEE00;
-	margin-left:135px;
 	border:0px;
-	
+	margin-left:13px;
+}
+
+.button-clear{
+	height:30px;
+	width:110px;
+	font-weight: bold;
+	font-family:Arial;
+	background-color:#EEEE00;
+	margin-left:50px;
+	border:0px;
+}
+
+.submit-newjoseph{
+	height:30px;
+	width:80px;
+	font-weight: bold;
+	font-family:Arial;
+	background-color:#EEEE00;
+	margin-left:240px;
+	margin-top:-20px;
+	border:0px;
 }
 
 .div-circle{
@@ -148,6 +246,13 @@
 	padding-left:1px;
 	align:left;
 	list-style-type:none;
+	display:inline-block;
+}
+
+.li-inline-name{
+	width:232px;
+	height:30px;
+	display:inline;
 }
 
 .li-name{
@@ -158,6 +263,19 @@
 .input-name{
 	width:100%;
 	height:100%;
+	padding-left:10px;
+	padding-right:10px;
+	font-size:20px;
+	font-family:Arial;
+}
+
+.input-name-field{
+	background: #fff;
+	border-style:solid;
+	border-color:#E6E6FA;
+	height:30px;
+	width:252px;
+	margin-left:13px;
 	padding-left:10px;
 	padding-right:10px;
 	font-size:20px;
