--- a/WebContent/css/mycss.css
+++ b/WebContent/css/mycss.css
@@ -35,7 +35,7 @@
 
 .div-background{
 	width:860px;
-	height: 500px;
+	height: 600px;
 	background: #fff;
 	background-color:rgba(255, 255, 255, 0.3); 
 	margin-top:150px;
@@ -102,12 +102,12 @@
 	height:125px;
 	background:#fff;
 	text-align:ceter;
-	margin-left:189px;
+	margin-left:165px;
 	margin-top:0px;
 	display:none;
 	position:relative;
-	z-index: 999; 
-	border:0px;
+	z-index:99;
+	border:1px solid #DEDEDE;
 }
 
 .label-names-tag{
@@ -132,7 +132,8 @@
 .li-for-name{
 	height:36px;
 	width:250px;
-	margin-top:1px;
+	margin-top:0px;
+	margin-left:-12px;
 }
 
 .label-name{
@@ -141,7 +142,7 @@
 	border-style:solid;
 	border-color:#E6E6FA;
 	height:30px;
-	width:250px;
+	width:228px;
 	padding-left:10px;
 	padding-right:10px;
 	margin-left:13px;
@@ -168,11 +169,12 @@
 	border:0.2;
 	border-style:solid;
 	border-color:#E6E6FA;
-	height:30px;
+	height:27px;
 	width:200px;
 	margin-left:-30px;
 	padding-left:10px;
 	padding-right:10px;
+	padding-top:5px;
 	font-size:20px;
 	font-family:Arial;
 }
@@ -193,7 +195,7 @@
 	font-weight: bold;
 	font-family:Arial;
 	background-color:#EEEE00;
-	margin-left:50px;
+	margin-left:53px;
 	border:0px;
 }
 
@@ -213,6 +215,20 @@
 	width:250px;
 	margin-left:10px;
 	display:inline-block;
+}
+
+.div-input-buttons{
+	height:30px;
+	width:320px;
+	float:right;
+	margin-top:20px;
+	margin-right:380px;
+}
+
+.div-append-clear{
+	height:30px;
+	width:320px;
+	margin-top:10px;
 }
 
 .input-circle{
@@ -243,10 +259,15 @@
 }
 	
 .ol-name{
-	padding-left:1px;
+	padding-left:0px;
 	align:left;
 	list-style-type:none;
 	display:inline-block;
+	width:272px;
+	height:220px;
+	margin-left:14px;
+	background:#fff;
+	overflow-y:scroll;
 }
 
 .li-inline-name{
@@ -280,5 +301,6 @@
 	padding-right:10px;
 	font-size:20px;
 	font-family:Arial;
+	display:none;
 }
 	
